// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with box props 1`] = `
Object {
  "className": "css-1pwrqjj css-3ekj6a fp-Box",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="emotion-0 emotion-1 fp-Box"
>
  Hello world
</p>
`;

exports[`composition use should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="emotion-0 emotion-1 fp-Box"
>
  Hello world
</p>
`;

exports[`composition use should render correctly for a Button component with props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #574feb;
  border-radius: 8px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  box-shadow: 0px 1px 4px 0 rgba(0,0,0,0.15),0px 1px 2px 0px rgba(0,0,0,0.05);
}

.emotion-3[disabled],
.emotion-3[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #574feb 0px 0px 0px 1px, #aba7f5 0px 0px 0px 3px;
}

.emotion-3:hover {
  background-color: #4138e8;
}

.emotion-3:hover:active {
  background-color: #2218d5;
}

.emotion-3 {
  background-color: unset;
  border: 1px solid #574feb;
  color: #574feb;
  fill: #574feb;
  box-shadow: unset;
}

.emotion-3:hover {
  background-color: #574feb;
  color: #fff;
  fill: #fff;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 8px;
  color: #212121;
  fill: #212121;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  box-shadow: 0px 1px 4px 0 rgba(0,0,0,0.15),0px 1px 2px 0px rgba(0,0,0,0.05);
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #b3b3b3 0px 0px 0px 1px, #d9d9d9 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-0:hover {
  background-color: #efefef;
}

.emotion-0:hover:active {
  background-color: #d6d6d6;
}

<button
  aria-disabled="false"
  class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Button"
  type="button"
>
  Hello world
</button>
`;

exports[`defaultProps should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 test fp-Box"
>
  hello world
</div>
`;

exports[`props should assign a ref 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 fp-Box"
>
  Hello world
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for a borderRadius of 0 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border-radius: 0px !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for a borderRadius of 1 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border-radius: 2px !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for a borderRadius of 2 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border-radius: 4px !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for a borderRadius of 3 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border-radius: 8px !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for a borderRadius of 4 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border-radius: 16px !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for a borderRadius of 5 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border-radius: 32px !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for a borderRadius of 6 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border-radius: 64px !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for a borderRadius of default 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border-radius: 8px !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for a custom border 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  border: 1px solid #e6e6e6 !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for an altitude 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  box-shadow: 0px 6px 24px 0px rgba(0,0,0,0.15),0px 0px 12px 6px rgba(0,0,0,0.02);
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for hiddenBreakpoint with a max viewport 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (max-width:768px) {
  .emotion-1 {
    display: none !important;
  }
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for hiddenBreakpoint with a min viewport 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width:769px) {
  .emotion-1 {
    display: none !important;
  }
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for hiddenBreakpoint with a single viewport 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width:481px) and (max-width:768px) {
  .emotion-1 {
    display: none !important;
  }
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for showBreakpoint with a max viewport 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (min-width:769px) {
  .emotion-1 {
    display: none !important;
  }
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for showBreakpoint with a min viewport 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (max-width:768px) {
  .emotion-1 {
    display: none !important;
  }
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly for showBreakpoint with a single viewport 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (max-width:480px) {
  .emotion-1 {
    display: none !important;
  }
}

@media screen and (min-width:769px) {
  .emotion-1 {
    display: none !important;
  }
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  background-color: red !important;
  color: white !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with CSS props with active 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1:active {
  background-color: #574feb !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with CSS props with breakpoints 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  background-color: #574feb !important;
}

@media screen and (min-width:1px) and (max-width:480px) {
  .emotion-1 {
    background-color: #9e46d8 !important;
  }
}

@media screen and (min-width:769px) and (max-width:1024px) {
  .emotion-1 {
    background-color: red !important;
  }
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with CSS props with breakpoints 2`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  background-color: #574feb !important;
}

@media screen and (max-width:768px) {
  .emotion-1 {
    background-color: #9e46d8 !important;
  }
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with CSS props with breakpoints 3`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  background-color: #574feb !important;
}

@media screen and (min-width:769px) {
  .emotion-1 {
    background-color: #9e46d8 !important;
  }
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with CSS props with focus 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1:focus {
  background-color: #574feb !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with CSS props with hover 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1:hover {
  background-color: #574feb !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with CSS props with hoveractive 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1:hover:active {
  background-color: #574feb !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with CSS props with visited 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1:visited {
  background-color: #574feb !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with a color CSS prop 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  background-color: #d9d9d9 !important;
  color: #574feb !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with a font size CSS prop 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  font-size: 1.5rem !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with a font weight CSS prop 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  font-weight: 600 !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with a spacing CSS prop (marginX, paddingX) 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  margin-left: 2rem !important;
  margin-right: 2rem !important;
  padding-left: 1rem !important;
  padding-right: 1rem !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with a spacing CSS prop (marginY, paddingY) 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  margin-top: 2rem !important;
  margin-bottom: 2rem !important;
  padding-top: 1rem !important;
  padding-bottom: 1rem !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with a spacing CSS prop 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  margin: 2rem !important;
  padding-left: 1rem !important;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with aria* props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-label="hello"
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`props should render correctly with overrides 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-0 emotion-1 fp-Box"
/>
`;

exports[`theming Box.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-0 emotion-1 fp-Box"
>
  hello world
</div>
`;

exports[`theming Box.root should render correctly 2`] = `
.emotion-1 {
  color: green !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: green;
}

<div
  class="emotion-0 emotion-1 fp-Box"
>
  hello world
</div>
`;
